
Version (SVN)
-------------

All:   Resolved issue CASTOR-1463 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Extract loading of mapping from Mapping into new MappingUnmarshaller.
       Details: http://jira.codehaus.org/browse/CASTOR-1463
       (Ralf - 20060626)

All:   Resolved issue CASTOR-1459 using contribution from Dave Brosius [dbrosius@qis.net]
       Removed use of reflective toArray() calls by passing in a properly sized array.
       Details: http://jira.codehaus.org/browse/CASTOR-1459
       (Ralf - 20060626)

XML:   Resolved issue CASTOR-1460 using contribution from Dave Brosius [dbrosius@qis.net]
       Fixed bad boolean test.
       Details: http://jira.codehaus.org/browse/CASTOR-1460
       (Ralf - 20060626)

JDO:   Resolved issue CASTOR-1461 using contribution from Dave Brosius [dbrosius@qis.net]
       Used local variable instead of refetching it.
       Details: http://jira.codehaus.org/browse/CASTOR-1461
       (Ralf - 20060626)

XML:   Resolved issue CASTOR-1462 using contribution from Dave Brosius [dbrosius@qis.net]
       Moved wrongly placed parenthesis that caused toString() being executed for no reason.
       Details: http://jira.codehaus.org/browse/CASTOR-1462
       (Ralf - 20060626)

All:   Resolved issue CASTOR-1456 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Extracted creation of MappingLoaders from Mapping into new MappingLoaderRegistry.
       Details: http://jira.codehaus.org/browse/CASTOR-1456
       (Ralf - 20060624)

JDO:   Fixed bug CASTOR-1454 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved code to unmarshal Castor JDO configuration file to JDOConfFactory.
       Details: http://jira.codehaus.org/browse/CASTOR-1454
       (Werner - 20060624)

JDO:   Fixed bug CASTOR-1450 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Add getCurrentTransaction() to AbstractDatabaseImpl.