@@ -83,10 +83,10 @@ public final class JOTMTransactionManagerFactory implements TransactionManagerFa
         
         try {
             Class factory = Class.forName(factoryClassName);
-            Class[] types = new Class[] {Boolean.class, Boolean.class};
+            Class[] types = new Class[] {boolean.class, boolean.class};
             Object[] params = new Object[] {Boolean.TRUE, Boolean.FALSE};
             Object jotm = factory.getConstructor(types).newInstance(params); 
-            Method method = factory.getMethod("getTransactionmanager", (Class[]) null);
+            Method method = factory.getMethod("getTransactionManager", (Class[]) null);
             Object obj = method.invoke(jotm, (Object[]) null);
             transactionManager = (TransactionManager) obj;
         } catch (Exception ex) {
